--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
     <!-- NAVBAR -->
     <nav class="navbar">
       <div class="navbar-container">
-        <input type="checkbox" id="checkbox" />
         <div class="hamburger-lines">
           <span class="line line1"></span>
           <span class="line line2"></span>
@@ -43,7 +42,7 @@
           <li><a href="#contact">Contact</a></li>
         </ul>
         <div class="logo">
-          <img src="https://i.postimg.cc/TP6JjSTt/logo.webp" alt="Logo" />
+          <img src="az_clothes-removebg-preview.png" alt="Logo" />
         </div>
       </div>
     </nav>
@@ -57,11 +56,10 @@
         </div>
         <div class="home_txt animate">
           <p class="collectio">SUMMER COLLECTION</p>
-          <h2>FALL - WINTER<br />Collection 2023</h2>
+          <h2>FALL - WINTER<br />Collection 2025</h2>
           <div class="home_label">
             <p>
-              A specialist label creating luxury essentials. Ethically crafted
-              <br />with an unwavering commitment to exceptional quality.
+            luxury clothes
             </p>
           </div>
           <button>
@@ -389,8 +387,8 @@
       <div class="footer-container container">
         <div class="content_1">
           <img
-            src="https://i.postimg.cc/htGyQ4JB/footer-logo.png"
-            alt="Footer Logo"
+            src="az_2clothes-removebg-preview.png"
+            alt="Footer Logo" id="azc"
           />
           <p>
             The customer is at the heart of our<br />unique business model,
